Fix status bar overflow on mobile

--- a/src/assets/stylesheets/MobileProjectBar.scss
+++ b/src/assets/stylesheets/MobileProjectBar.scss
@@ -7,7 +7,6 @@
   background-color: $rpf-white;
   border-block-start: 1px solid $rpf-grey-150;
   display: flex;
-  block-size: 25px;
   justify-content: space-between;
   padding: 0 $space-0-5;
 }
