--- a/src/assets/stylesheets/SaveStatus.scss
+++ b/src/assets/stylesheets/SaveStatus.scss
@@ -15,7 +15,7 @@
   margin: unset;
 
   .save-status__text {
-    @include font-size-1(regular);
+    @include font-size-0-75(regular);
   }
 }
 
